<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".main.activity.DisplayHost" >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_display_host"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:titleTextColor="#ffffff"></android.support.v7.widget.Toolbar>

        <EditText
            android:id="@+id/editSchema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:ems="10"
            android:inputType="text"
            android:layout_below="@+id/toolbar_display_host"
            android:layout_alignLeft="@+id/editUrl"
            android:layout_alignStart="@+id/editUrl">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editUsernameLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/editPort"
            android:layout_alignRight="@+id/toolbar_display_host"
            android:layout_alignEnd="@+id/toolbar_display_host" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editSchema"
            android:layout_alignParentLeft="true"
            android:text="@string/schema"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignBaseline="@+id/editSchema" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignBaseline="@+id/editPort"
            android:layout_alignBottom="@+id/editPort"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editUrl"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/url"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignBaseline="@+id/editUrl" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/editUsernameLogin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignBaseline="@+id/editUsernameLogin" />

        <EditText
            android:id="@+id/editPasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword|text"
            android:layout_below="@+id/editUsernameLogin"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editPasswordLogin"
            android:layout_alignBottom="@+id/editPasswordLogin"
            android:layout_alignParentLeft="true"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|text"
            android:layout_below="@+id/editUrl"
            android:layout_alignLeft="@+id/editUsernameLogin"
            android:layout_alignStart="@+id/editUsernameLogin">


        </EditText>

        <EditText
            android:id="@+id/editUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editPort"
            android:layout_below="@+id/editSchema"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="run"
            android:text="@string/save"
            android:layout_below="@+id/editPasswordLogin"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</ScrollView>