<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="229dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:id="@+id/main_Layout"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="180dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:layout_alignTop="@+id/main_Layout"
            android:layout_alignLeft="@+id/main_Layout"
            android:layout_alignStart="@+id/main_Layout"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editUsernameLogin"
            android:layout_gravity="center_horizontal"
            android:hint="@string/username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPasswordLogin"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerHost"
                android:layout_weight="1"
                android:prompt="@string/host" />

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:id="@+id/buttonHost"
                android:src="@drawable/add" />

        </LinearLayout>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/buttonLogin"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</LinearLayout>
